smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/mixins/mixins-with-member-override-2.flattened.smithy
$version: "2.0"

namespace com.amazon.example

/// Structure A2 docs
@tags([
    "a"
])
structure Valid {
    @private
    @required
    a: String
    c: Integer
}
